# Marimo_Extra

./: .gitignore  README.md  index.py  netlify_build.sh  pyproject.toml  test_index.py
.github/workflows/: deploy.yml  dev_web_deploy.yml  release.yml
notebooks/: fibonacci.py
notebooks/__marimo__/: fibonacci.html
public/: index.csv
scripts/: gen_index_csv.py  test_build.py  test_deploy.py  website_build.py
src/marimo_extra/: __init__.py  marimo_export.py  marimo_web.py  run_scripts.py  ui.py  utils.py
