[project]
name = "marimo-extra"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Omar Faruk", email = "omarfaruk20@iut-dhaka.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.11.0",
    "pandas>=2.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "altair>=5.5.0",
    "watchdog>=6.0.0",
]

[project.scripts]
gen_index_csv = "marimo-extra.run_scripts:run_gen_index_csv"
website_build = "marimo-extra.run_scripts:run_website_build"