[project]
name = "marimo-extra"
version = "1.0.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Omar Faruk", email = "omarfaruk20@iut-dhaka.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.11.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "altair>=5.5.0",
    "polars>=1.22.0",
    "watchdog>=6.0.0",
]

[project.scripts]
gen_index_csv = "marimo_extra.run_scripts:run_gen_index_csv"
website_build = "marimo_extra.run_scripts:run_website_build"
local_server = "marimo_extra.run_scripts:run_local_server"
local_web = "marimo_extra.run_scripts:run_local_web"
build_local_web = "marimo_extra.run_scripts:run_build_local_web"
test = "marimo_extra.run_scripts:run_test_build"


# [[tool.uv.index]]
# name = "testpypi"
# url = "https://test.pypi.org/simple/"
# publish-url = "https://test.pypi.org/legacy/"
